--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 #requirement.txt
-snowflake-connector-python[pandas]pyarrow<8.1.0,>=8.0.0
+snowflake-connector-python[pandas]
+charset-normalizer==2.0.12
+snowflake-connector-python==2.7.9
